--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-features.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-blog-features.scss
@@ -58,7 +58,7 @@
       }
 
       &:hover {
-        .post-preview {
+        .post-preview > div {
           transform: none;
         }
       }
