--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
@@ -5,7 +5,9 @@
         {{ range $index, $element := .Params.posts }}
           <article class="qdrant-blog-posts__article post">
             <a class="post-link" href="{{ .link }}">
-              <div class="post-preview" style="background-image: url({{ .previewUrl }})"></div>
+             <div class="post-preview">
+               <div style="background-image: url({{ .previewUrl }})"></div>
+             </div>
               <h6 class="post-title">{{ .title }}</h6>
               <p class="post-description">{{ .description }}</p>
               <div class="post-about">
