--- a/qdrant-landing/themes/qdrant-2024/assets/css/components/_post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/components/_post.scss
@@ -6,9 +6,16 @@
     height: 0;
     padding-bottom: 50%;
     margin-bottom: $spacer * 1.5;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    overflow: hidden;
+
+    & > div {
+      width: 100%;
+      height: 0;
+      padding-bottom: 50%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
   }
 
   &-title {
@@ -48,7 +55,7 @@
       color: $primary-50;
     }
 
-    .post-preview {
+    .post-preview > div {
       transform: scale(1.05);
       transition: all 0.25s ease-in-out;
     }
