moved styles for the hybrid cloud page to the separate file

--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -74,3 +74,8 @@
     </div>
   </footer>
 {{ end }}
+</main>
+{{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+<script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
+</body>
+</html>
