--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
@@ -7,40 +7,24 @@
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui"
   />
   <meta charset="UTF-8" />
-  <title>Title</title>
 
-  {{ $opts := dict "transpiler" "dartsass" "includePaths" (slice "node_modules") }}
+  <title>{{ .Title }} - Qdrant</title>
 
-  {{ if .IsHome }}
-  {{ end }}
+  {{ partial "css" . }}
 
+  {{ partial "seo_schema" . }}
 
-  {{ if eq .Section "hybrid-cloud" }}
-  {{ with resources.Get
-  (printf "css/%s.scss" .Section) | toCSS $opts | minify | fingerprint
-  }}
-  <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
-  {{ end }}
-  {{ else }}
-  {{ with resources.Get
-  "css/main.scss" | toCSS $opts | minify | fingerprint
-  }}
-  <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
-  {{ end }}
-
-  {{ with resources.Get
-  "css/main.scss" | toCSS $opts | minify | fingerprint
-  }}
-  <link href="{{ .RelPermalink }}" rel="stylesheet" integrity="{{ .Data.Integrity }}" crossorigin="anonymous" />
-  {{ end }}
-  {{ $pageSearchCss := resources.Get "css/search/search.scss" | toCSS $opts | minify | resources.Fingerprint
-    "sha512"
-  }}
-  <link href="{{ $pageSearchCss.RelPermalink }}" rel="stylesheet" integrity="{{ $pageSearchCss.Data.Integrity }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/favicon/site.webmanifest">
+  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-config" content="/favicon/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- todo -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  {{ end }}
-
+  <link rel="preconnect" href="https://fonts.gstatic.com"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400&display=swap" />
 </head>
