--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-how-it-works.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-how-it-works.html
@@ -22,7 +22,12 @@
         </div>
 
         <div class="hybrid-cloud-how-it-works__preview col-12 col-xl-10">
-          <img src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" class="no-copy no-events" draggable="false" />
+          <img
+            src="{{ .Params.image.src }}"
+            alt="{{ .Params.image.alt }}"
+            class="no-copy no-events"
+            draggable="false"
+          />
         </div>
       </div>
     </div>
