--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-kubernetes-clusters.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-kubernetes-clusters.html
@@ -8,7 +8,12 @@
           <p class="hybrid-cloud-kubernetes-clusters__description">{{ .Params.descriptionSecondPart }}</p>
         </div>
         <div class="hybrid-cloud-kubernetes-clusters__preview col-12 col-xl-6">
-          <img src="{{ .Params.image.src }}" alt="{{ .Params.image.alt }}" class="no-copy no-events" draggable="false" />
+          <img
+            src="{{ .Params.image.src }}"
+            alt="{{ .Params.image.alt }}"
+            class="no-copy no-events"
+            draggable="false"
+          />
         </div>
       </div>
     </div>
