--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -1,28 +1,30 @@
 {{ partial "head.html" . }}
 
 
-  <body>
-    <main>
-      <header class="main-header">
-        {{ partial "top-banner" . }}
+<body>
+  <main>
+    <header class="main-header">
+      {{ partial "top-banner" . }}
 
-        {{ partial "menu" . }}
-        {{ partial "menu-mobile" . }}
-        {{ partial "hero" . }}
-        {{ partial "customers" . }}
-      </header>
-      {{ partial "core-features" . }}
-      {{ partial "customer-stories" . }}
-      {{ partial "integrations" . }}
+      {{ partial "menu" . }}
+      {{ partial "menu-mobile" . }}
+      {{ partial "hero" . }}
+      {{ partial "customers" . }}
+    </header>
+    {{ partial "core-features" . }}
+    {{ partial "customer-stories" . }}
+    {{ partial "integrations" . }}
 
-      {{ with (.Site.GetPage "/headless/main/docker-deploy") }}
-        {{ partial "docker-deploy" (dict "context" . "class" "") }}
-      {{ end }}
+    {{ with (.Site.GetPage "/headless/main/docker-deploy") }}
+      {{ partial "docker-deploy" (dict "context" . "class" "") }}
+    {{ end }}
 
-      {{ with (.Site.GetPage "/headless/main/vectors") }}
-        {{ partial "vectors" . }}
-      {{ end }}
+    {{ with (.Site.GetPage "/headless/main/vectors") }}
+      {{ partial "vectors" . }}
+    {{ end }}
 
-      {{ partial "get-started" . }}
+    {{ partial "get-started" . }}
 
-      {{ partial "footer" . }}
+    {{ partial "footer" . }}
+  </main>
+</body>
