--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-blog-posts.html
@@ -1,9 +1,9 @@
 {{ with (.Site.GetPage "/qdrant-blog/qdrant-blog-posts") }}
   <section class="qdrant-blog-posts">
     <div class="container">
-      <div class="qdrant-blog-posts__articles post">
+      <div class="qdrant-blog-posts__articles row gx-5">
         {{ range $index, $element := .Params.posts }}
-          <article class="qdrant-blog-posts__article post">
+          <article class="qdrant-blog-posts__article post col-12 col-xl-4">
             <a class="post-link" href="{{ .link }}">
              <div class="post-preview">
                <div style="background-image: url({{ .previewUrl }})"></div>
