--- a/qdrant-landing/themes/qdrant-2024/assets/css/mixins/_get-started-small.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/mixins/_get-started-small.scss
@@ -53,7 +53,7 @@
     top: 0;
     width: rem(220);
     height: rem(220);
-    background-image: url('/img/blurred/blurred-light-6.png');
+    background-image: url('/img/blurred/blurred-light-6.svg');
     background-position: top;
     background-size: cover;
   }
