--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_get-started.scss
@@ -76,7 +76,7 @@
     top: 0;
     width: rem(250);
     height: rem(250);
-    background-image: url('/img/blurred/blurred-light-2.png');
+    background-image: url('/img/blurred/blurred-light-2.svg');
     background-position: top;
     background-size: cover;
   }
@@ -128,7 +128,7 @@
       bottom: 0;
       width: 50%;
       height: 100%;
-      background-image: url('/img/blurred/blurred-light-3.png');
+      background-image: url('/img/blurred/blurred-light-3.svg');
       background-position: right;
       background-size: cover;
     }
