added global base of, removed baseof from hybrid cloud, moved code to the list layout

--- a/qdrant-landing/themes/qdrant-2024/layouts/demos-and-tutorials/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/demos-and-tutorials/list.html
@@ -1,1 +1,12 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+
+<header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+</header>
+
+{{ partial "demos" . }}
+{{ partial "tutorials" . }}
+{{ partial "get-started" . }}
+{{ end }}
