add qdrant blog post page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -54,3 +54,4 @@
 @import 'partials/qdrant-blog-hero';
 @import 'partials/pagination';
 @import 'partials/newsletter';
+@import 'partials/qdrant-blog-post';
