--- a/qdrant-landing/themes/qdrant-2024/layouts/_default/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/_default/baseof.html
@@ -1,1 +1,12 @@
-{{ define "main" }}{{ end }}
+<!doctype html>
+<html lang="en">
+{{- partial "head.html" . -}}
+<body>
+<main>
+  {{ block "main" . }}{{ end }}
+</main>
+{{ partial "footer" . }}
+{{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+<script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
+</body>
+</html>
