--- a/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/list.html
@@ -1,8 +1,24 @@
 {{ define "main" }}
+  {{ with (.Site.GetPage "/headless/menu") }}
   <header class="main-header">
-    {{ partial "top-banner" . }}
-    {{ partial "menu" . }}
-    {{ partial "menu-mobile" . }}
+    <div class="main-menu">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <a href="/">
+              {{ partial "logo.html" . }}
+            </a>
+          </div>
+          <div class="col-6">
+            <div class="main-menu__buttons">
+              <a href="{{ .Params.logIn.url }}" class="menu-link mx-3">{{ .Params.logIn.text }}</a>
+              <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm">{{ .Params.startFree.text }}</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    {{ end }}
     {{ partial "hybrid-cloud-hero" . }}
   </header>
 
