add more component to the about page

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -35,6 +35,8 @@
 @import 'partials/leadership';
 @import 'partials/open-roles';
 @import 'partials/investors';
+@import 'partials/mission';
+@import 'partials/our-story';
 
 .main-header {
   background: $neutral-10;
