--- a/qdrant-landing/themes/qdrant-2024/layouts/about-us/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/about-us/baseof.html
@@ -9,6 +9,8 @@
   </header>
 </main>
 
+{{ partial "mission" . }}
+{{ partial "our-story" . }}
 {{ partial "carousel" . }}
 {{ partial "leadership" . }}
 {{ partial "investors" . }}
