--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_investors.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_investors.scss
@@ -4,6 +4,7 @@
   padding-top: $spacer * 4;
   padding-bottom: $spacer * 4;
   background-color: $neutral-94;
+  position: relative;
 
   &__title {
     font-size: map-get($font-sizes, 4);
@@ -13,7 +14,9 @@
   }
 
   &__logos {
+    position: relative;
     row-gap: $spacer * 4;
+    z-index: 1;
   }
 
   &__logo {
@@ -24,6 +27,10 @@
     background-repeat: no-repeat;
   }
 
+  &__overlay {
+    display: none;
+  }
+
   @include media-breakpoint-up(xl) {
     padding-top: $spacer * 7.5;
     padding-bottom: $spacer * 7.5;
@@ -31,12 +38,25 @@
     &__title {
       font-size: map-get($font-sizes, 2);
       line-height: rem(67);
-      margin-bottom: $spacer * 4;
+      margin-bottom: $spacer * 2.5;
     }
 
     &__logos {
       align-items: center;
       min-height: rem(240);
+    }
+
+    &__overlay {
+      display: block;
+      position: absolute;
+      left: 0;
+      width: 100%;
+      height: rem(240);
+      bottom: $spacer * 7.5;
+      background-image: url('../../img/grid.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
     }
   }
 }
