--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/investors.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/investors.html
@@ -1,5 +1,6 @@
 {{ with (.Site.GetPage "/headless/investors") }}
   <section class="investors">
+    <div class="investors__overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-12">
