--- a/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/list.html
@@ -10,7 +10,7 @@
           <div class="col-6">
             <div class="main-menu__buttons">
               <a href="{{ .Params.logIn.url }}" class="menu-link mx-3">{{ .Params.logIn.text }}</a>
-              <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm">{{ .Params.startFree.text }}</a>
+              <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm">Get Started</a>
             </div>
           </div>
         </div>
