--- a/qdrant-landing/themes/qdrant-2024/layouts/_default/baseof.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/_default/baseof.html
@@ -6,7 +6,6 @@
       {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer" . }}
-    {{ $pageSearchScrollJs := resources.Get "/js/search/scroll.js" | js.Build | minify | resources.Fingerprint "sha512" }}
-    <script src="{{ $pageSearchScrollJs.RelPermalink }}"></script>
   </body>
+  {{ partial "js.html" . }}
 </html>
