--- a/qdrant-landing/themes/qdrant-2024/layouts/index.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/index.html
@@ -1,4 +1,4 @@
-{{ partial "head.html" . }}
+{{ define "main" }}
 <header class="main-header">
   {{ partial "top-banner" . }}
 
@@ -21,4 +21,4 @@
 
 {{ partial "get-started" . }}
 
-{{ partial "footer" . }}
+{{ end }}
