--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/customer-stories.html
@@ -6,20 +6,13 @@
         <div class="customer-stories__header-content">
           {{ .Scratch.Set "cssClass" "link_xl" }}
           {{ partial "link" . }}
-          <div class="customer-stories__controls">
-            <button type="button" disabled class="customer-stories__button customer-stories__button-prev">
-              <span>{{ partial "svg" "angle-right.svg" }}</span>
-            </button>
-            <button type="button" class="customer-stories__button">
-              <span>{{ partial "svg" "angle-right.svg" }}</span>
-            </button>
-          </div>
         </div>
       </div>
-      <div class="customer-stories__cards-wrapper">
-        <div class="customer-stories__cards row flex-nowrap">
+      <div class="splide">
+      <div class="splide__track" data-glide-el="track">
+        <div class="splide__list">
           {{ range .Params.storyCards }}
-            <div class="col-12 col-xl-4">
+            <div class="splide__slide">
               <div class="card customer-stories__card">
                 <div>
                   <img src="{{ .icon }}" alt="{{ .brand }}" />
@@ -38,5 +31,11 @@
         </div>
       </div>
     </div>
+    </div>
+
+
+
+
+
   </section>
 {{ end }}
