--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-features.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-features.html
@@ -14,7 +14,7 @@
       </div>
       <div class="hybrid-cloud-features__link">
         <p>{{ .Params.link.content }}</p>
-        <a class="link link_xl align-self-start" href="{{ .Params.link.url }}">{{ .Params.link.text }}</a>
+        <a class="link link_xl align-self-start" href="{{ .Params.link.url }}" target="_blank">{{ .Params.link.text }}</a>
       </div>
     </div>
   </section>
