fixes and other

--- a/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/hybrid-cloud/list.html
@@ -9,8 +9,8 @@
           </div>
           <div class="col-6">
             <div class="main-menu__buttons">
-              <a href="{{ .Params.logIn.url }}" class="menu-link mx-3">{{ .Params.logIn.text }}</a>
-              <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm">Get Started</a>
+              <a href="{{ .Params.logIn.url }}" class="menu-link mx-3" target="_blank">{{ .Params.logIn.text }}</a>
+              <a href="{{ .Params.startFree.url }}" class="button button_contained button_sm" target="_blank">Get Started</a>
             </div>
           </div>
         </div>
