--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-contacted.html
@@ -5,10 +5,10 @@
       <a
         href="{{ .context.Params.contactUs.url }}"
         class="{{ .class }}__button-mobile button button_outlined button_lg"
-      >
+        target="_blank">
         {{ .context.Params.contactUs.text }}
       </a>
-      <a href="{{ .context.Params.contactUs.url }}" class="{{ .class }}__button button button_contained">
+      <a href="{{ .context.Params.contactUs.url }}" class="{{ .class }}__button button button_contained" target="_blank">
         {{ .context.Params.contactUs.text }}
       </a>
     </div>
