--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started-small.html
@@ -4,7 +4,7 @@
       <div class="row justify-content-xl-between align-items-xl-center">
         <div class="{{ .class }}__text col-12 col-xl-7">
           <h3 class="{{ .class }}__title">{{ .context.Params.title }}</h3>
-          <a href="{{ .context.Params.getStarted.url }}" class="button button_contained">
+          <a href="{{ .context.Params.getStarted.url }}" class="button button_contained" target="_blank">
             {{ .context.Params.getStarted.text }}
           </a>
         </div>
