--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-hero.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/hybrid-cloud-hero.html
@@ -14,10 +14,10 @@
           </div>
           <p class="hybrid-cloud-hero__description">{{ .Params.description }}</p>
           <div class="hybrid-cloud-hero__buttons">
-            <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">
+            <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg" target="_blank">
               {{ .Params.startFree.text }}
             </a>
-            <a href="{{ .Params.contactUs.url }}" class="button button_outlined button_lg">
+            <a href="{{ .Params.contactUs.url }}" class="button button_outlined button_lg" target="_blank">
               {{ .Params.contactUs.text }}
             </a>
           </div>
