--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/get-started.html
@@ -7,7 +7,7 @@
         <div class="get-started__overlay-bottom"></div>
         <h3 class="get-started__title">{{ .Params.title }}</h3>
         <p class="get-started__subtitle">{{ .Params.subtitle }}</p>
-        <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg">{{ .Params.startFree.text }}</a>
+        <a href="{{ .Params.startFree.url }}" class="button button_contained button_lg" target="_blank">{{ .Params.startFree.text }}</a>
         <div class="get-started__planet-icon" style="background-image: url(/img/planet.svg)"></div>
         <div class="get-started__duo-planet-icon" style="background-image: url(/img/duo-planet.svg)"></div>
       </div>
