terms and pryvacy links

--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/footer.html
@@ -66,8 +66,8 @@
         <div class="footer__bottom-content">
           <span>{{ .Params.copyright }}</span>
           <div class="footer__bottom-links">
-            <a href="{{ .Params.termsLink.url }}">{{ .Params.termsLink.text }}</a>
-            <a href="{{ .Params.privacyLink.url }}">{{ .Params.privacyLink.text }}</a>
+            <a href="{{ .Params.termsLink.url }}" target="_blank">{{ .Params.termsLink.text }}</a>
+            <a href="{{ .Params.privacyLink.url }}" target="_blank">{{ .Params.privacyLink.text }}</a>
           </div>
         </div>
       </div>
