--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/head.html
@@ -5,7 +5,7 @@
   />
   <meta charset="UTF-8" />
 
-  <title>{{ .Title }} - Qdrant</title>
+  <title>{{ .Title }}</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
